@@ -1,8 +1,8 @@
 Package: stm
 Type: Package
 Title: Estimation of the Structural Topic Model
-Version: 1.0.0
-Date: 2014-10-02
+Version: 1.0.1
+Date: 2014-10-03
 Author: Margaret E. Roberts, Brandon M. Stewart and Dustin Tingley
 Maintainer: Brandon Stewart <bstewart@fas.harvard.edu>
 Depends: R (>= 2.10)
@@ -15,7 +15,7 @@ Description: The Structural Topic Model (STM) allows researchers
   and estimation of topic-covariate regressions.
 License: MIT + file LICENSE
 URL: http://structuraltopicmodel.com
-Packaged: 2014-10-02 21:09:48 UTC; Brandon
+Packaged: 2014-10-03 22:02:47 UTC; Brandon
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-10-03 00:52:04
+Date/Publication: 2014-10-04 18:02:15
